# SO-ARM101_MoveIt_IsaacSim

./: README.md
src/cube_pick_place/: package.xml  setup.cfg  setup.py
src/cube_pick_place/cube_pick_place/: apple_detector.py
src/so_arm_moveit_config/config/: initial_positions.yaml  kinematics.yaml
src/so_arm_moveit_config/launch/: moveit_rviz.launch.py
src/so_arm_target_mover/: package.xml  setup.cfg  setup.py
src/so_arm_target_mover/so_arm_target_mover/: apple_pick_place.py
