<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_target_mover</name>
  <version>1.0.0</version>
  <description>Apple pick &amp; place for SO-ARM101 using MoveIt 2.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>so_arm_moveit_config</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
